// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom tags parse smoke tests DEPENDS_ON DEPENDS_ON 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 35,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 35,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": undefined,
        "end": 35,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 32,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 16,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 14,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests FIND_IN_MAP FIND_IN_MAP 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 45,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 45,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "description": "The intrinsic function Fn::FindInMap returns the value corresponding to keys in a two-level map that is declared in the Mappings section.",
          "kind": "sequence",
          "propertyName": "Fn::FindInMap",
          "referenceEntityTypes": Array [
            "MAPPING",
          ],
          "tag": "!FindInMap",
          "type": "FIND_IN_MAP",
        },
        "end": 45,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 42,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 26,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 24,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests GET_ATT GET_ATT 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 31,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 31,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": StringASTNode {
        "customTag": Object {
          "description": "The Fn::GetAtt intrinsic function returns the value of an attribute from a resource in the template.",
          "kind": "scalar",
          "propertyName": "Fn::GetAtt",
          "referenceEntityTypes": Array [
            "RESOURCE",
          ],
          "tag": "!GetAtt",
          "type": "GET_ATT",
        },
        "end": 31,
        "isKey": false,
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "string",
        "value": "logicVariable",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests REF REF 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 28,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 28,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": StringASTNode {
        "customTag": Object {
          "description": "The intrinsic function Ref returns the value of the specified parameter or resource.",
          "kind": "scalar",
          "propertyName": "Ref",
          "referenceEntityTypes": Array [
            "PARAMETER",
            "RESOURCE",
          ],
          "tag": "!Ref",
          "type": "REF",
        },
        "end": 28,
        "isKey": false,
        "location": "property",
        "parent": [Circular],
        "start": 15,
        "type": "string",
        "value": "logicVariable",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests SUB SUB 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 39,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 39,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "description": "The intrinsic function Fn::Sub substitutes variables in an input string with values that you specify.",
          "kind": "sequence",
          "propertyName": "Fn::Sub",
          "referenceEntityTypes": Array [
            "RESOURCE",
            "PARAMETER",
          ],
          "tag": "!Sub",
          "type": "SUB",
        },
        "end": 39,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 36,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 20,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;
